--- a/en/_posts/2023-10-03-mrna.md
+++ b/en/_posts/2023-10-03-mrna.md
@@ -3,9 +3,9 @@ tags: [books]
 img: "mrna.jpg"
 ---
 
-# A Shot To Save The World by Gregory Zuckerman - (audio) book of the week about the mRNA tech that saved millions
+# A Shot To Save The World by Gregory Zuckerman - (audio) book of the week about the mRNA tech that saved millions of lives
 
-Even though the [Covid-19](/covid) pandemic is mostly over, I still remember [the start of it](/coronavirus/) the long wait to get my [vaccine shot](/shot/), how I had to [convince people around me to get the vaccine](/vaccine) while still having [friends being skeptical](/john/) about it. This year, [people behind the mRNA Covid vaccine got a Nobel prize in medicine][nb]! If you want to learn more about their story, their work and the whole (very bumpy) journey how the [mRNA technology came to be](https://en.wikipedia.org/wiki/Messenger_RNA) I encourage you to read this book: **"A Shot To Save The World"** by Gregory Zuckerman: *An inside story of life-or-death race for a COVID-19 vaccine* ([Amazon][a] | [Audible][b]).
+Even though the [Covid-19](/covid) pandemic is mostly over, I still remember [the start of it](/coronavirus/) the long wait to get my [vaccine shot](/shot/), how I had to [convince people around me to get the vaccine](/vaccine) while still having [friends being skeptical](/john/) about it. This year, [people behind the mRNA Covid vaccine got a Nobel prize in medicine][nb]! If you want to learn more about their story, their work and the whole (very bumpy) journey how the [mRNA technology came to be](https://en.wikipedia.org/wiki/Messenger_RNA) I encourage you to read this book: **"A Shot To Save The World"** by Gregory Zuckerman: *An inside story of life-or-death race for a COVID-19 vaccine* ([Amazon][a] / [Audible][b]).
 
 <!--More-->
 
@@ -35,11 +35,11 @@ Now the cool thing is that not only they saved millions of lives but also gave p
 
 > The impressive flexibility and speed with which mRNA vaccines can be developed pave the way for using the new platform also for vaccines against other infectious diseases. In the future, the technology may also be used to deliver therapeutic proteins and treat some cancer types.
 
-## Read the book - there are more protagonists there!
+## Read the book - there are more protagonists there!  💉
 
-These two are just few people who contributed to the race to get the vaccines 💉 out. Read the book - it'll read like a thriller and you'll see a journey of many people who against all odds contributed to a technology that helped us save lives and get us back to some sense of normality after the COVID-19 pandemic.
+These two are just the two people out of many who contributed to the race to get the vaccines out. Read the book - it'll read like a thriller and you'll see a journey of those who against all odds contributed to a technology that helped us save lives and get us back to some sense of normality after the COVID-19 pandemic.
 
-### [Get the book on Amazon][a] or [Listen on Audible][b]
+### [Get the book on Amazon][a] or [Listen on Audible][b] (like me!)
 
 
 [nb]: https://www.nobelprize.org/prizes/medicine/2023/press-release/
